# langchain-summarization

./: .gitignore  README.md  ai_intro.txt  pyproject.toml
app/config/: env_loader.py  settings.py
app/core/: embeddings_factory.py  llm_factory.py
app/services/: agent_service.py  analysis_prompts.py  retriever_service.py  summarizer_service.py  tool_factory.py  tool_service.py
app/utils/: logger.py  vector_debugger.py
task-1/: task1.py
task-10/: task10.py
task-11/: task11.py
task-2/: task2.py
task-3/: task3.py
task-4/: task4.py
task-5/: task5.py
task-6/: task6.py
task-7/: task7.py
task-8/: task8.py
task-9/: task9.py
tasks/task1/: task1.py
tasks/task10/: task10.py
tasks/task11/: task11.py
tasks/task2/: task2.py
tasks/task3/: task3.py
tasks/task4/: task4.py
tasks/task5/: task5.py
tasks/task6/: task6.py
tasks/task7/: task7.py
tasks/task8/: task8.py
tasks/task9/: task9.py
